--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaceFlow</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,13 +17,13 @@
             <p>Timeline of your face's flow</p>
         </div>
         <div class="nav-items">
-            <div class="nav-item active" data-page="preview">
+            <div class="nav-item active" data-page="status">
+                <span class="nav-item-icon">&#9632;</span>
+                <span class="nav-item-label">Home</span>
+            </div>
+            <div class="nav-item" data-page="preview">
                 <span class="nav-item-icon">&#9658;</span>
                 <span class="nav-item-label">Preview</span>
-            </div>
-            <div class="nav-item" data-page="status">
-                <span class="nav-item-icon">&#9673;</span>
-                <span class="nav-item-label">Status</span>
             </div>
             <div class="nav-item" data-page="render">
                 <span class="nav-item-icon">&#9678;</span>
@@ -136,7 +137,7 @@
 
     <main class="main">
         <!-- Preview Page -->
-        <div id="page-preview" class="page active">
+        <div id="page-preview" class="page">
             <div class="preview-layout">
                 <div class="preview-main">
                     <div id="preview-content" class="content">
@@ -245,8 +246,40 @@
         </div>
 
         <!-- Status Page -->
-        <div id="page-status" class="page">
+        <div id="page-status" class="page active">
             <div id="status-content" class="content">
+                <div class="welcome-section" id="welcomeSection">
+                    <div class="welcome-header" id="welcomeToggle">
+                        <h2>Welcome to FaceFlow</h2>
+                        <span class="welcome-chevron" id="welcomeChevron">&#9660;</span>
+                    </div>
+                    <div class="welcome-body" id="welcomeBody">
+                        <p>Create a timelapse video of your face over the years. Here's how to get started:</p>
+                        <div class="welcome-steps">
+                            <div class="welcome-step">
+                                <span class="step-number">1</span>
+                                <div class="step-content">
+                                    <strong>Add your photos</strong>
+                                    <p>Copy photos of yourself into the <code>photos/</code> folder.</p>
+                                </div>
+                            </div>
+                            <div class="welcome-step">
+                                <span class="step-number">2</span>
+                                <div class="step-content">
+                                    <strong>Add reference photos</strong>
+                                    <p>Add 1-3 clear photos of your face to the <code>reference/</code> folder. These help identify you in group photos.</p>
+                                </div>
+                            </div>
+                            <div class="welcome-step">
+                                <span class="step-number">3</span>
+                                <div class="step-content">
+                                    <strong>Scan for faces</strong>
+                                    <p>Click "Scan Photos" below to detect and match faces. Then preview and render your timelapse!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="status-grid">
                     <div class="status-card">
                         <h3>Photos</h3>
