Added blur render option

--- a/web/index.html
+++ b/web/index.html
@@ -445,6 +445,12 @@
                                 </select>
                                 <div class="setting-hint" id="ageModeHint">Age will be rendered on the video</div>
                             </div>
+                            <div class="setting-row">
+                                <label>Blur</label>
+                                <input type="range" id="renderBlur" min="0" max="50" value="0">
+                                <span class="setting-value" id="renderBlurValue">Off</span>
+                            </div>
+                            <div class="setting-hint" id="blurHint">Blur faces for private sharing</div>
                         </div>
 
                         <div class="settings-section">
